<resources>
    <string name="app_name">Option Fusion</string>
    <string name="title_activity_main">Option Fusion</string>
    <string name="action_settings">Settings</string>
    <string name="ticker">Symbol</string>
    <string name="submit">Go</string>
    <string name="formatPriceAtMaxReturn">Realized %s price</string>
    <string name="formatPriceAtBreakEven">Break Even Price</string>
    <string name="bid_ask">Bid/Ask</string>
    <string name="timeToExp">Expires</string>
    <string name="maxReturn">Potential Gain</string>
    <string name="annualized">Annualized</string>
    <string name="expires_before">Expires before</string>
    <string name="expires_after">Expires after</string>
    <string name="change_to_break_even">Change to Break Even</string>
    <string name="change_to_max_return">Change to Max Return</string>
    <string name="max_return_annualized">Max Gain Annualized</string>
    <string name="min_position_cost">Min Cost of Position</string>
    <string name="max_position_cost">Max Cost of Position</string>
    <string name="failed_getting_chain">Failed getting option chain</string>
    <string name="stock_search_hint">Symbol or Name</string>
    <string name="title_trade_cost">Capital at Risk</string>
    <string name="connection_failed">Connection failed</string>
    <string name="error_sign_in">Please use Google to sign in</string>
    <string name="prices_as_of_market_close_s">Prices as of market close %s</string>
    <string name="sounds_good">Sounds good</string>
    <string name="why_eod_text">Option Fusion is currently limited to end-of-day market data, updated daily around 5pm EST. \n\nIn the future we\'ll be offering a subscription-based upgrade to professional quality real-time stock and option quotes.\n\nLet us know if you\'re interested!</string>
    <string name="we_re_just_getting_started">We\'re just getting started!</string>
    <string name="notify_me_when_the_real_time_upgrade_is_available">Notify me when the real-time upgrade is available</string>
    <string name="ok">OK</string>
    <string name="total_loss_price">Total loss price</string>
    <string name="gain_at_expiration">Gain at Expiration</string>
    <string name="the_trade">To Open</string>
    <string name="exp">Exp</string>
    <string name="strike">Strike</string>
    <string name="type">Type</string>
    <string name="qty">Qty</string>
    <string name="failed_fetch_chain">Failed getting option chain</string>
    <string name="add_filters_to_refine_results">Add filters to refine results</string>
    <string name="pct_per_year">% / year</string>
    <string name="potential_return">Minimum Potential Return</string>
    <string name="expiration">Expiration</string>
    <string name="time">Time</string>
    <string name="roi">Return</string>
    <string name="kind">Kind</string>
    <string name="watchlist">Watchlist</string>
    <string name="help">FAQ</string>
    <string name="favorites">Favorite Spreads</string>
    <string name="days_to_exp_format" formatted='false'>%s / %d days</string>
    <string name="favorites_list_empty">You haven\'t starred any favorites yet!</string>
    <string name="undo">UNDO</string>
    <string name="label_strikefilter_bullish">Include Options for Bullish Spreads</string>
    <string name="label_strikefilter_bearish">Include Options for Bearish Spreads</string>
    <string name="title_results">Spread Filter</string>
</resources>
