<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="15dp"
    >

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        style="@style/Large"
        android:text="@string/we_re_just_getting_started"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/text"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/why_eod_text"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:layout_below="@id/headline"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_below="@id/text"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkbox"
        android:layout_alignBaseline="@id/checkbox"
        android:layout_marginLeft="10dp"
        android:paddingRight="30dp"
        android:text="@string/notify_me_when_the_real_time_upgrade_is_available"
    />

    <TextView
        android:id="@+id/submit"
        android:layout_below="@id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        style="@style/button"
        android:text="@string/ok"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>