<?xml version="1.0" encoding="utf-8"?>

<!--Buttons-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_time"
            style="@style/FilterButton"
            android:layout_width="@dimen/circle_button"
            android:layout_height="@dimen/circle_button"
            android:background="@drawable/shape_circle"
            app:backgroundTint="@color/filter_button_color"
            app:srcCompat="@drawable/ic_today_24dp"/>

        <TextView
            android:id="@+id/btn_time_label"
            style="@style/FilterButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_strike"
            style="@style/FilterButton"
            android:layout_width="@dimen/circle_button"
            android:layout_height="@dimen/circle_button"
            android:background="@drawable/shape_circle"
            app:backgroundTint="@color/filter_button_color"
            app:srcCompat="@drawable/ic_attach_money_black_24px"/>

        <TextView
            android:id="@+id/btn_strike_label"
            style="@style/FilterButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strike"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_roi"
            style="@style/FilterButton"
            android:layout_width="@dimen/circle_button"
            android:layout_height="@dimen/circle_button"
            android:background="@drawable/shape_circle"
            app:backgroundTint="@color/filter_button_color"
            app:srcCompat="@drawable/ic_trending_up_black_24px"/>

        <TextView
            android:id="@+id/btn_roi_label"
            style="@style/FilterButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/roi"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_spread_types"
            style="@style/FilterButton"
            android:layout_width="@dimen/circle_button"
            android:layout_height="@dimen/circle_button"
            android:background="@drawable/shape_circle"
            app:backgroundTint="@color/filter_button_color"
            app:srcCompat="@drawable/ic_swap_vert_black_24dp"/>

        <TextView
            android:id="@+id/btn_spread_types_label"
            style="@style/FilterButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kind"/>
    </LinearLayout>

</LinearLayout>

